  - net.ttddyy.dsproxy.support.SLF4JQueryCountLoggingHandlerInterceptor
  - net.ttddyy.dsproxy.support.SystemOutQueryCountLoggingHandlerInterceptor
  - net.ttddyy.dsproxy.support.CommonsQueryCountLoggingHandlerInterceptor

* Removed spring related classes
  - net.ttddyy.dsproxy.support.BeanNameProxyDataSource
  - net.ttddyy.dsproxy.support.DataSourceProxyNativeJdbcExtractor

* Removed AOP alliance related class
  - net.ttddyy.dsproxy.support.ProxyConnectionAdvice

* `ProxyDataSourceListener`
  - `MethodExecutionListener` and `QueryExecutionListener` are combined to `ProxyDataSourceListener`
  - `ChainListener` and `CompositeMethodListener` are combined to `CompositeProxyDataSourceListener`

  - `ProxyConfig#getMethodListener` and `ProxyConfig#getQueryListener` are changed to `ProxyConfig#getListener`

  Removed:
  - net.ttddyy.dsproxy.listener.NoOpQueryExecutionListener
  - net.ttddyy.dsproxy.listener.NoOpMethodExecutionListener
  - net.ttddyy.dsproxy.listener.ChainListener
  - net.ttddyy.dsproxy.listener.CompositeMethodListener

  TODO:
  - Update documentation for `ChainListener`

* `TracingMethodListener`
  - TracingMethodListener#TracingCondition => BooleanSupplier
  - TracingMethodListener#TracingMessageConsumer => Consumer<String>

* Removed `LoggingCondition` in favor of `BooleanCondition`
  - net.ttddyy.dsproxy.listener.LoggingCondition

* Remove unused class
  - net.ttddyy.dsproxy.proxy.DataSourceNameAware
  - net.ttddyy.dsproxy.proxy.ParameterKeyUtils
  - net.ttddyy.dsproxy.proxy.ReflectionUtils

* Make `MethodExecutionListenerUtils#MethodExecutionCallback` functional interface

* Update `ProxyDataSourceBuilder`
  - Remove `SingleMethodExecution` in favor of `Consumer<MethodExecutionContext>`
  - Remove `SingleQueryExecution` in favor of `BiConsumer<ExecutionInfo, List<QueryInfo>>`

* Update datasource name in log to only appear when it is set.
  - Remove `net.ttddyy.dsproxy.listener.logging.AbstractQueryLoggingListener#setWriteDataSourceName()`

