@@ -41,14 +41,6 @@ public class SLF4JQueryLoggingListener extends AbstractQueryLoggingListener {
         this.logLevel = logLevel;
     }
 
-    /**
-     * @deprecated use {{@link #setLogger(String)}}
-     */
-    @Override
-    @Deprecated
-    protected void resetLogger(String loggerName) {
-        this.logger = LoggerFactory.getLogger(loggerName);
-    }
 
     /**
      * Override {@link Logger} instance that has specified logger name.
